Fri Feb 28 12:32:37 2003  George Lebl <jirka@5z.com>

	* config/gdm.conf.in: hmmm xdmcp/PingInterval was not present
	  here so add

Fri Feb 28 12:29:51 2003  George Lebl <jirka@5z.com>

	* config/gdm.conf.in, daemon/gdm.h: raise DisplaysPerHost to default
	  to 2.

2003-02-26  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* configure.in: Added Walloon (wa) to ALL_LINGUAS

2003-02-26  Taneem Ahmed  <taneem@eyetap.org>

	* configure.in: Added "bn" to ALL_LINGUAS.

2003-02-21  Roozbeh Pournader  <roozbeh@sharif.edu>

	* configure.in: Added "fa" back after fixing the bug.

2003-02-18  Christian Rose  <menthos@menthos.com>

	* configure.in: Disabled "fa" as it's broken and breaks the
	build.

2003-02-18  Roozbeh Pournader  <roozbeh@sharif.edu>

	* configure.in: Added "fa" to ALL_LINGUAS.

2003-02-17  Sanlig Badral  <badral@chinggis.com>

	* gui/gdmlanguage.c, config/locale.alias: Added Mongolian

2003-02-16  Kjartan Maraas  <kmaraas@gnome.org>

	* daemon/verify-crypt.c: Fix typo in comment.
	* daemon/verify-pam.c: Same.
	* daemon/verify-shadow: Here too.
	
2003-02-13  Ross Golder <rossg@golder.org>

	* configure.in, gui/gdmlanguage.c, locale.alias: Added Thai
	  language support.

Mon Feb 03 09:18:01 2003  George Lebl <jirka@5z.com>

	* Release 2.4.1.3

Mon Feb 03 09:16:10 2003  George Lebl <jirka@5z.com>

	* daemon/md5.[ch]: Fix redhat bug #83334 by applying a modified
	  patch from Matt Wilson.  Basically use guint32 instead of
	  our own type.  This fixes cookie generation (and likely crashes)
	  on non-alpha 64bit platforms.  Has 0 effect on non-64 bit
	  platforms.  Also: My hovercraft is full of eels.

Fri Jan 31 16:03:51 2003  George Lebl <jirka@5z.com>

	* configure.in, Makefile.am: do something similar as in the other
	  modules since I have some minor issues with po directory handling.
	  The biggest change is building po first before others, dunno if
	  that makes any difference

Sat Jan 25 09:13:32 2003  George Lebl <jirka@5z.com>

	* Release 2.4.1.2
