@@ -15,10 +15,15 @@
 #		- George
 
 Azerbaijani		az_AZ.UTF-8,az_AZ
+Albanian			sq_AL.UTF-8,sq_AL
 Arabic(Egypt)		ar_EG.UTF-8,ar_EG
 Arabic(Lebanon)		ar_LB.UTF-8,ar_LB
 Amharic			am_ET.UTF-8,am_ET
 Basque			eu_ES.UTF-8,eu_ES
+Bosnian			bs_BA.UTF-8,bs_BA
+Belarusian			be_BY.UTF-8,be_BY
+Bengali			bn_BD.UTF-8,bn_BD
+Bengali(India)			bn_IN.UTF-8,bn_IN
 Bulgarian		bg_BG.UTF-8,bg_BG
 Catalan			ca_ES.UTF-8,ca_ES
 Chinese(simplified)	zh_CN.UTF-8,zh_CN
@@ -37,25 +42,36 @@ French			fr_FR.UTF-8,fr_FR
 Galician		gl_ES.UTF-8,gl_ES
 German			de_DE.UTF-8,de_DE
 Greek			el_GR.UTF-8,el_GR
+Gujarati			gu_IN.UTF-8,gu_IN
 Hebrew			he_IL.UTF-8,he_IL
+Hindi			hi_IN.UTF-8,hi_IN
 Hungarian		hu_HU.UTF-8,hu_HU
 Icelandic		is_IS.UTF-8,is_IS
+Indonesian			id_ID.UTF-8,id_ID
+Interlingua			ia.UTF-8,ia
 Irish			ga_IE.UTF-8,ga_IE
 Italian			it_IT.UTF-8,it_IT
 Japanese		ja_JP.UTF-8,ja_JP
 Korean			ko_KR.UTF-8,ko_KR
+Kannada			kn_IN.UTF-8,kn_IN
 Latvian			lv_LV.UTF-8,lv_LV
 Lithuanian		lt_LT.UTF-8,lt_LT
 Macedonian		mk_MK.UTF-8,mk_MK
 Malay			ms_MY.UTF-8,ms_MY
+Malayalam			ml_IN.UTF-8,ml_IN
+Marathi			mr_IN.UTF-8,mr_IN
 Mongolian		mn_MN.UTF-8,mn_MN
 Norwegian(bokmal)	no_NO.UTF-8,no_NO
 Norwegian(nynorsk)	nn_NO.UTF-8,nn_NO
+Oriya			or_IN.UTF-8,or_IN
+Persian			fa_IR.UTF-8,fa_IR
 Polish			pl_PL.UTF-8,pl_PL
 Portuguese		pt_PT.UTF-8,pt_PT
 Portuguese(Brazilian)	pt_BR.UTF-8,pt_BR
+Panjabi			pa_IN.UTF-8,pa_IN
 Romanian		ro_RO.UTF-8,ro_RO
 Russian			ru_RU.UTF-8,ru_RU
+Serbian			sr_YU.UTF-8,sr_YU
 Slovak			sk_SK.UTF-8,sk_SK
 Slovenian		sl_SI.UTF-8,sl_SI
 Spanish			es_ES.UTF-8,es_ES
@@ -63,8 +79,11 @@ Spanish(Mexico)		es_MX.UTF-8,es_MX
 Swedish			sv_SE.UTF-8,sv_SE
 Swedish(Finland)	sv_FI.UTF-8,sv_FI
 Tamil			ta_IN.UTF-8,ta_IN
+Telugu			te_IN.UTF-8,te_IN
 Thai			th_TH.UTF-8,th_TH
 Turkish			tr_TR.UTF-8,tr_TR
 Ukrainian		uk_UA.UTF-8,uk_UA
 Vietnamese		vi_VN.UTF-8,vi_VN
 Walloon			wa_BE.UTF-8,wa_BE
+Welsh			cy_GB.UTF-8,cy_GB
+Yiddish			yi.UTF-8,yi
