@@ -1,3 +1,10 @@
+2003-03-03  Ross Golder <rossg@golder.org>
+
+	* gui/gdmlanguage.c, config/locale.alias: Added language support
+	  for these languages - Mongolian, Indonesian, Kannada, Hindi
+	  Bengali, Belarusian, Bosnian, Welsh, Persian, Interlingua,
+	  Albanian, Serbian, Yiddish and Panjabi.
+
 Fri Feb 28 12:32:37 2003  George Lebl <jirka@5z.com>
 
 	* config/gdm.conf.in: hmmm xdmcp/PingInterval was not present
